--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background: #7FDBFF;
-	color: #FFF;
+	color: #001f3f;
 	text-align:center;
 	font-family:Helvetica;
 	font-size:24px;
@@ -30,7 +30,7 @@ footer {
 .topnav{
 	position:fixed;
 	top:0;
-	background-color: #DDDDDD;
+	background-color: #FFF;
 }
 
 .topnav a {
@@ -45,5 +45,5 @@ footer {
 
 .topnav a:hover {
 	background-color: #001f3f;
-	color: #DDDDDD;
+	color: #FFF;
 }
